@@ -1,38 +1,47 @@
 package com.AL565.prose.service;
 
-import com.AL565.prose.model.notifications.Notification;
 import com.AL565.prose.model.notifications.NotificationType;
+import com.AL565.prose.model.notifications.PostulationNotification;
 import com.AL565.prose.model.notifications.StageNotification;
 import com.AL565.prose.repository.NotificationRepository;
-import com.AL565.prose.security.exceptions.NotificationExceptions.NotificationFetchException;
-import com.AL565.prose.service.dto.StageNotificationDTO;
+import com.AL565.prose.repository.PostulationNotificationRepository;
+import com.AL565.prose.service.dto.notifications.NotificationsResponseDTO;
+import com.AL565.prose.security.exceptions.NotificationExceptions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class NotificationsServiceLayerTest {
     @Mock
     private NotificationRepository notificationRepository;
+    @Mock
+    private PostulationNotificationRepository postulationNotificationRepository;
+    @Mock
+    private NotificationsHelper notificationsHelper;
 
     @InjectMocks
     private GestionnaireService gestionnaireService;
 
+    @BeforeEach
+    void setUpNotificationsHelper() {
+        ReflectionTestUtils.setField(gestionnaireService, "notificationsHelper", new NotificationsHelper(notificationRepository));
+    }
+
     @Test
-    @DisplayName("getNotifications() returns stage notifications from repository")
-    void getStageNotifications_returnsStageNotifications() throws Exception {
+    @DisplayName("getStageNotifications() returns stage notifications from repository")
+    void getNotifications_returnsStageNotifications() throws Exception {
         StageNotification n1 = new StageNotification();
         n1.setType(NotificationType.STAGE_NOTIFICATION);
         n1.setMessage("Stage submitted");
@@ -43,69 +52,82 @@ class NotificationsServiceLayerTest {
         n2.setMessage("Stage updated");
         n2.setCreatedAt(LocalDateTime.now());
 
-        when(notificationRepository.findNotificationsByTypeAndReadAt(NotificationType.STAGE_NOTIFICATION, null))
+        PostulationNotification n3 = new PostulationNotification();
+        n3.setType(NotificationType.POSTULATION_NOTIFICATION);
+        n3.setMessage("New application");
+        n3.setCreatedAt(LocalDateTime.now());
+
+        when(notificationRepository.findNotificationsByTypeAndFirstRecipientReadAt(NotificationType.STAGE_NOTIFICATION, null))
                 .thenReturn(List.of(n1, n2));
 
-        StageNotificationDTO result = gestionnaireService.getStageNotifications();
+        when(notificationRepository.findNotificationsByTypeAndSecondRecipientReadAt(NotificationType.POSTULATION_NOTIFICATION, null))
+                .thenReturn(List.of(n3));
 
-        assertThat(result.getStageNotifications()).hasSize(2);
-        assertThat(result.getStageNotifications().getFirst()).isInstanceOf(StageNotification.class);
-        assertThat(result.getStageNotifications().getFirst().getType()).isEqualTo(NotificationType.STAGE_NOTIFICATION);
-        assertThat(result.getStageNotifications().getFirst().getMessage()).isEqualTo("Stage submitted");
+        NotificationsResponseDTO result = gestionnaireService.getGestionnaireNotifications();
+
+        assertThat(result).isNotNull();
+        assertThat(result.getTotalCount()).isEqualTo(3);
+        assertThat(result.getGroups()).hasSize(2);
+        assertThat(result.getGroups().get(0).getItems()).hasSize(2);
+        assertThat(result.getGroups().get(0).getItems().getFirst().getMessage()).isEqualTo("Stage submitted");
+        assertThat(result.getGroups().get(1).getItems().getFirst().getMessage()).isEqualTo("New application");
 
         verify(notificationRepository, times(1))
-                .findNotificationsByTypeAndReadAt(NotificationType.STAGE_NOTIFICATION, null);
-        verifyNoMoreInteractions(notificationRepository);
+                .findNotificationsByTypeAndFirstRecipientReadAt(NotificationType.STAGE_NOTIFICATION, null);
     }
 
     @Test
     @DisplayName("getNotifications() wraps repository failures into NotificationFetchException")
     void getNotifications_wrapsIntoNotificationFetchException() {
-        when(notificationRepository.findNotificationsByTypeAndReadAt(any(), any()))
+        when(notificationRepository.findNotificationsByTypeAndFirstRecipientReadAt(any(), any()))
                 .thenThrow(new RuntimeException("DB down"));
 
-        assertThatThrownBy(() -> gestionnaireService.getStageNotifications())
-                .isInstanceOf(NotificationFetchException.class);
+        assertThatThrownBy(() -> gestionnaireService.getGestionnaireNotifications())
+                .isInstanceOf(NotificationExceptions.NotificationFetchException.class);
 
         verify(notificationRepository, times(1))
-                .findNotificationsByTypeAndReadAt(NotificationType.STAGE_NOTIFICATION, null);
+                .findNotificationsByTypeAndFirstRecipientReadAt(NotificationType.STAGE_NOTIFICATION, null);
     }
 
     @Test
-    void markNotificationAsRead_success() throws Exception {
-        Notification notification = new StageNotification();
+    @DisplayName("markPostulationAsReadBySecondRecipient() sets secondRecipientReadAt and saves")
+    void markPostulationAsReadBySecondRecipient_setsReadAtAndSaves() throws Exception {
+        PostulationNotification notification = new PostulationNotification();
         notification.setId(1L);
-        notification.setReadAt(null);
 
-        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
-        when(notificationRepository.save(any(Notification.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
 
-        gestionnaireService.markNotificationAsRead(1L);
+        gestionnaireService.markPostulationAsReadBySecondRecipient(1L);
 
-        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(captor.capture());
-        assertThat(captor.getValue().getReadAt()).isNotNull();
+        assertThat(notification.getSecondRecipientReadAt()).isNotNull();
+        verify(postulationNotificationRepository, times(1)).findById(1L);
+        verify(notificationRepository, times(1)).save(notification);
     }
 
     @Test
-    void markNotificationAsRead_notFound_throwsNotificationFetchException() {
-        when(notificationRepository.findById(anyLong())).thenReturn(Optional.empty());
+    @DisplayName("markPostulationAsReadBySecondRecipient() throws NotificationFetchException when not found")
+    void markPostulationAsReadBySecondRecipient_notFound_throws() {
+        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.empty());
 
-        assertThatThrownBy(() -> gestionnaireService.markNotificationAsRead(1L))
-                .isInstanceOf(NotificationFetchException.class);
+        assertThatThrownBy(() -> gestionnaireService.markPostulationAsReadBySecondRecipient(1L))
+                .isInstanceOf(NotificationExceptions.NotificationFetchException.class);
 
         verify(notificationRepository, never()).save(any());
     }
 
     @Test
-    void markNotificationAsRead_saveThrows_wrappsToNotificationFetchException() {
-        Notification notification = new StageNotification();
+    @DisplayName("markPostulationAsReadBySecondRecipient() wraps save failures into NotificationFetchException")
+    void markPostulationAsReadBySecondRecipient_saveThrows_wrapsException() {
+        PostulationNotification notification = new PostulationNotification();
         notification.setId(1L);
 
-        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
-        doThrow(new RuntimeException("DB")).when(notificationRepository).save(any(Notification.class));
+        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
+        doThrow(new RuntimeException("DB error")).when(notificationRepository).save(any());
 
-        assertThatThrownBy(() -> gestionnaireService.markNotificationAsRead(1L))
-                .isInstanceOf(NotificationFetchException.class);
+        assertThatThrownBy(() -> gestionnaireService.markPostulationAsReadBySecondRecipient(1L))
+                .isInstanceOf(NotificationExceptions.NotificationFetchException.class);
+
+        verify(postulationNotificationRepository, times(1)).findById(1L);
+        verify(notificationRepository, times(1)).save(any());
     }
 }
